# Neel-PRL

./: README.md
Data/: RailDistance21.5Lattice8test24000fps.csv  RailDistance21.5Lattice8test34000fps.csv  RailDistance22.5Lattice7test34000fps.csv  RailDistance22.5Lattice8test34000fps.csv
Simulations/Data/: Cases.xlsx  RailDistance21.5Lattice6test14000fps.csv  RailDistance21.5Lattice6test24000fps.csv  RailDistance22.5Lattice7test14000fps.csv  RailDistance22.5Lattice7test24000fps.csv  RailDistance22.5Lattice8test14000fps.csv  RailDistance22Lattice6test34000fps.csv  RailDistance22Lattice8test24000fps.csv  visualization.m
Simulations/Experiments/: Quasi-StaticTest225mmSpec5Run1.xlsx  Quasi-StaticTest225mmSpec5Run2.xlsx  Quasi-staicTestsRealGeometrySpec5.mat  Quasi-staticTests24-10-14Specimen5.mat  Quasi-staticTests24-10-14Tests5&7Spec5.mat  Quasi-staticTestsRealGeomPre22mmSpec5Cases.mat  RailDistance225Lattice6test14000fps.csv  Snap-through-0203 (1).xlsx
Simulations/Independence of interaction potential/: Readme.txt
Simulations/MagneticForceMeasurements/: ExperimentalMagneticForcePlot.m  ExperimentalMagneticForcePlotNeel.m  MagForceMeasurements.mat  MagForceMeasurementsCorrectDataMay2015.mat  MagForceMeasurementsData.mat  (+6 more)
Simulations/PiecewiseContinuousElementFunctionBistableComposite/: Assemblers.h  BistableComposite.h  BistableCompositePiecewise.h  BistableCompositePiecewiseTest.cc  BistableCompositeTest.cc  BistableSpring.h  CMakeLists.txt  ImplicitDynamics.h  MainTrialBistableSpring.cc  MainWavePropagationNew.cc  NonlinearMagnet.h  NonlinearMagnetTest.cc
(+200 files in other folders)
