add_executable_by_name(BistableCompositePiecewiseTest)
add_executable_by_name(BistableCompositeTest)
add_executable_by_name(NonlinearMagnetTest)
add_executable_by_name(TodaSpringTest)
add_executable_by_name(NonlinearSpringTest)
add_executable_by_name(ForceDisplacementCurve)
add_executable_by_name(NeoHookeantest)
add_executable_by_name(MainTrialBistableSpring)
add_executable_by_name(ElementBistableSpringTest)
add_executable_by_name(MainBistableSpringChain)
add_executable_by_name(MainExperimentWavePropagation)
add_executable_by_name(MainBistableSpringMagnetChain)
add_executable_by_name(MainGeneralizedBistableLinearSpringChain)
add_executable_by_name(MainRandomizedElementExperimentWavePropagation)
add_executable_by_name(MainWavePropagationNew)
add_subdirectory(energyLaw)
add_subdirectory(harvardCollaboration)